# polaris-console

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: agentic-update.yml  automerge.yml  ci.yml  codeql.yml  container.yml  helm.yml  monthly-hygiene.yml  quarterly-cleanup.yml  release.yml
backend/: __init__.py
backend/app/: main.py
backend/app/api/: routes.py  (+1 more)
charts/: artifacthub-repo.yml  index.yaml  polaris-console-0.1.0.tgz  polaris-console-0.1.1.tgz  polaris-console-0.1.2.tgz  polaris-console-0.1.3.tgz  polaris-console-0.1.4.tgz
charts/polaris-console/: Chart.yaml  README.md  values-dev.yaml  values.schema.json  values.yaml
docs/: architecture.md  security-hardening.md
docs/adr/: 0001-fastapi-react-openapi-console.md  0002-backend-auth-boundary.md  0003-agentic-update-loop.md  0004-unique-generated-operation-ids.md  0005-no-spec-cache-in-repository.md  0006-agentic-bot-automerge-policy.md  0007-real-polaris-crud-validation.md  0008-helm-chart-and-public-chart-repository.md  0009-helm-security-controls.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
scripts/: agentic_repair.py  agentic_update_loop.sh  check_actions_pinned.sh  check_generated_current.py  check_workflows_yaml.py  container_smoke_test.sh  fetch_polaris_specs.py  helm_checks.sh  pr_hygiene.sh  quarterly_cleanup.sh  run_checks.sh  security_manifest_checks.sh
tests/: test_backend.py
(+25 files in other folders)
